--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,14 +1,27 @@
 <%layout("/layouts/boilerplate.ejs")%>
-<body>
-    <h3>All Listings</h3>
-<form method="get" action="/listings/new">
-    <button>Create New Listing</button>
-</form>
-    <ul>
-        <% for(listing of allListings) {%>
-            <li> <a href="/listings/<%= listing._id %> "><%= listing.title %> </a></li>
-        <% } %>
 
-    </ul>
- 
-</body>
+    <body>
+        <h3>All Listings</h3>
+        <!-- <form method="get" action="/listings/new">
+     <button>Create New Listing</button> 
+</form>-->
+
+        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+            <% for(listing of allListings) {%>
+                <a href="/listings/<%=listing._id%>" class="card-link">
+                <div class="card col" ">
+                    <img src="<%= listing.image %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
+                    <div class="card-img-overlay"></div>
+                    <div class="card-body">
+                        <p class="card-text">
+                           <b> <%= listing.title %></b> 
+                                <br>
+                                <%= listing.price.toLocaleString("en-In") %>
+                        </p>
+                    </div>
+                </div>
+                </a>
+                <% } %>
+
+        </div>
+    </body>
