--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,21 +1,39 @@
-<%layout("/layouts/boilerplate.ejs")%>
-<body>
-    <h3>Listing Details :</h3>
+<%layout(" /layouts/boilerplate.ejs")%>
 
-    <ul>
-        <li> <%= listing.title %></li>
-        <li> <%= listing.description %></li>
-        <li> &#8377;<%=  listing.price.toLocaleString("en-In") %></li>
-        <li> <%= listing.location %></li>
-        <li> <%= listing.country %></li>
-        
-    </ul>
-    <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
+    <body>
+        <h3>Listing Details :</h3>
 
-    <br><br>
-    <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-        <button>Delete</button>
+        <div class="card">
+            <img src="<%= listing.image %>" class="card-img-top" alt="listing_image">
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card’s content.</p>
+            </div>
+        </div>
 
-    </form>
-    
-</body>
+        <ul>
+            <li>
+                <%= listing.title %>
+            </li>
+            <li>
+                <%= listing.description %>
+            </li>
+            <li> &#8377;<%= listing.price.toLocaleString("en-In") %>
+            </li>
+            <li>
+                <%= listing.location %>
+            </li>
+            <li>
+                <%= listing.country %>
+            </li>
+
+        </ul>
+        <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
+
+        <br><br>
+        <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
+            <button>Delete</button>
+
+        </form>
+
+    </body>
