--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,3 +98,15 @@ font-weight: 400 !important;
     background-color: #fe424d !important;
     border: none !important;
 }
+
+/* show page */
+
+.show-img{
+    height: 30vh;
+
+}
+
+.btns{
+    display: flex;
+}
+
