--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,39 +1,32 @@
-<%layout(" /layouts/boilerplate.ejs")%>
+<%layout("/layouts/boilerplate.ejs")%>
 
-    <body>
-        <h3>Listing Details :</h3>
+    <div class="row mt-3">
+        <div class="col-8 offset-3 ">
 
-        <div class="card">
-            <img src="<%= listing.image %>" class="card-img-top" alt="listing_image">
+            <h3>Listing Details</h3>
+        </div>
+        <div class="card col-6 offset-3">
+            <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card’s content.</p>
+                <p class="card-text">
+                    <b>
+                        <%= listing.title %>
+                    </b> <br>
+                    <%= listing.description %> <br>
+                        &#8377;<%= listing.price.toLocaleString("en-In") %> <br>
+                            <%= listing.location %> <br>
+                                <%= listing.country %>
+                </p>
             </div>
         </div>
+    </div>
 
-        <ul>
-            <li>
-                <%= listing.title %>
-            </li>
-            <li>
-                <%= listing.description %>
-            </li>
-            <li> &#8377;<%= listing.price.toLocaleString("en-In") %>
-            </li>
-            <li>
-                <%= listing.location %>
-            </li>
-            <li>
-                <%= listing.country %>
-            </li>
+    <div class="btns">
+        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
 
-        </ul>
-        <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
-
-        <br><br>
+        
         <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-            <button>Delete</button>
+            <button class="btn btn-dark offset-5">Delete</button>
 
         </form>
-
-    </body>
+    </div>
