--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -16,7 +16,7 @@
                         <p class="card-text">
                            <b> <%= listing.title %></b> 
                                 <br>
-                                <%= listing.price.toLocaleString("en-In") %>
+                                <%= listing.price.toLocaleString("en-IN") %>
                         </p>
                     </div>
                 </div>
