--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -6,7 +6,7 @@
             <div class="col-8 offset-2">
             
                 <h3>Create a New Listing:</h3>
-                <form method="post" action="/listing" novalidate class="needs-validation">
+                <form method="post" action="/listings" novalidate class="needs-validation">
                     <div class="mb-3">
                         <label for="title" class="form-label">Title:</label>
                         <input name="listing[title]" placeholder="Enter Title" type="text" class="form-control" required>
