--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,74 +1,100 @@
 <%layout("/layouts/boilerplate.ejs")%>
 
-    <div class="row mt-3 ">
-        <div class="col-8 offset-3 ">
+<div class="row mt-3">
+  <div class="col-8 offset-3">
+    <h3><%= listing.title %></h3>
+  </div>
+  <div class="card col-6 offset-3 listing-card">
+    <img
+      src="<%= listing.image %>"
+      class="card-img-top show-img"
+      alt="listing_image"
+    />
+    <div class="card-body">
+    <p class="card-text">Owned by: <i> <%= listing.owner.username %></i></p>
+      <p class="card-text"> <%= listing.description %> </p>
+      <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN") %></p>
+      <p class="card-text"><%= listing.location %></p> 
+       <p class="card-text"><%= listing.country %></p>
+      </p>
+    </div>
+  </div>
+</div>
 
-            <h3>
-                <%= listing.title %>
-            </h3>
-        </div>
-        <div class="card col-6 offset-3 listing-card">
-            <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
-            <div class="card-body">
-                <p class="card-text">
+<% if(currUser && currUser._id.equals(listing.owner._id)){ %>
 
-                    <br>
-                    <%= listing.description %> <br>
-                        &#8377;<%= listing.price.toLocaleString("en-IN") %> <br>
-                            <%= listing.location %> <br>
-                                <%= listing.country %>
-                </p>
-            </div>
-        </div>
+<div class="btns">
+  <a
+    href="/listings/<%= listing._id %>/edit"
+    class="btn btn-dark col-1 offset-3 edit-btn"
+    >Edit</a
+  >
+
+  <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
+    <button class="btn btn-dark offset-5">Delete</button>
+  </form>
+</div>
+<% } %>
+
+
+
+<div class="col-8 offset-3 mb-3">
+  <hr />
+  <% if (currUser ) { %>
+  <h4>Leave a Review</h4>
+  <form
+    action="/listings/<%= listing._id %>/reviews"
+    method="post"
+    novalidate
+    class="needs-validation"
+  >
+    <div class="mt-3 mb-3">
+      <label for="rating" class="form-label">Rating:</label>
+      <input
+        type="range"
+        min="1"
+        max="5"
+        id="rating"
+        name="review[rating]"
+        class="form-range"
+      />
     </div>
 
-    <div class="btns">
-        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+    <div class="mt-3 mb-3">
+      <label for="comment" class="form-label">Comment:</label>
+      <textarea
+        rows="5"
+        cols="30"
+        name="review[comment]"
+        id="comment"
+        class="form-control"
+        required
+      ></textarea>
+      <div class="invalid-feedback">Please add some comment for review</div>
+    </div>
+    <button class="btn btn-outline-dark">Submit</button>
+  </form>
+  <% } %>
 
 
-        <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-            <button class="btn btn-dark offset-5">Delete</button>
-
-        </form>
+  <p><b>All Reviews</b></p>
+  <div class="row">
+    <% for(review of listing.reviews){ %>
+    <div class="card col-5 ms-3 mb-3">
+      <div class="card-body">
+        <div class="card-title"> @<%= review.author.username %> </div>
+        <div class="card-text"><%= review.comment %></div>
+        <div class="card-text"><%= review.rating %> Stars</div>
+      </div>
+      <form
+        method="post"
+        action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+        class="mb-3 mt-3"
+      >
+        <button class="btn btn-sm btn-dark">Delete</button>
+      </form>
     </div>
 
-    <div class="col-8 offset-3 mb-3">
-        <hr>
-        <h4>Leave a Review</h4>
-        <form action="/listings/<%= listing._id %>/reviews" method="post" novalidate class="needs-validation">
-            <div class="mt-3 mb-3">
-                <label for="rating" class="form-label">Rating:</label>
-                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
-            </div>
-
-            <div class="mt-3 mb-3">
-                <label for="comment" class="form-label">Comment:</label>
-                <textarea rows="5" cols="30" name="review[comment]" id="comment" class="form-control"
-                    required></textarea>
-                <div class="invalid-feedback">Please add some comment for review</div>
-            </div>
-            <button class="btn btn-outline-dark">Submit</button>
-        </form>
-
-        <hr>
-        <p><b>All Reviews</b></p>
-        <div class="row">
-            <% for(review of listing.reviews){ %>
-                <div class="card col-5 ms-3 mb-3">
-                    <div class="card-body">
-                        <div class="card-title">Jane Doe</div>
-                        <div class="card-text">
-                            <%= review.comment %>
-                        </div>
-                        <div class="card-text">
-                            <%= review.rating %> Stars
-                        </div>
-                    </div>
-                    <form method="post" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3 mt-3">
-                        <button class="btn btn-sm btn-dark">Delete</button>
-                    </form>
-                </div>
-
-                <% } %>
-        </div>
-    </div>
+    <% } %>
+  </div>
+</div>
