--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -48,17 +48,23 @@
     novalidate
     class="needs-validation"
   >
-    <div class="mt-3 mb-3">
-      <label for="rating" class="form-label">Rating:</label>
-      <input
-        type="range"
-        min="1"
-        max="5"
-        id="rating"
-        name="review[rating]"
-        class="form-range"
-      />
-    </div>
+    
+<div class="mt-3 mb-3">
+  <label for="rating" class="form-label">Rating:</label>
+    <fieldset class="starability-slot">
+  <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+  <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+  <label for="first-rate1" title="Terrible">1 star</label>
+  <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+  <label for="first-rate2" title="Not good">2 stars</label>
+  <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+  <label for="first-rate3" title="Average">3 stars</label>
+  <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+  <label for="first-rate4" title="Very good">4 stars</label>
+  <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+  <label for="first-rate5" title="Amazing">5 stars</label>
+</fieldset>
+</div>
 
     <div class="mt-3 mb-3">
       <label for="comment" class="form-label">Comment:</label>
@@ -83,8 +89,8 @@
     <div class="card col-5 ms-3 mb-3">
       <div class="card-body">
         <div class="card-title"> @<%= review.author.username %> </div>
-        <div class="card-text"><%= review.comment %></div>
-        <div class="card-text"><%= review.rating %> Stars</div>
+        <p class="starability-result card-text" data-rating="<%= review.rating%>"></p>
+        <div class="card-text"><%= review.comment %></div> 
       </div>
       <form
         method="post"
