added features of mapbox for location

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -38,7 +38,7 @@
 
         <div class="mb-3">
           <label for="image" class="form-label"> Upload image:</label>
-          <input name="listing[image]" type="file" class="form-control" />
+          <input name="listing[image]" type="file" class="form-control" required/>
         </div>
 
         <div class="mb-3">
