--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,12 +1,14 @@
 <%layout("/layouts/boilerplate.ejs")%>
-
+<script>
+  const mapToken="<%= process.env.MAP_TOKEN %>";
+</script>
 <div class="row mt-3">
   <div class="col-8 offset-3">
     <h3><%= listing.title %></h3>
   </div>
   <div class="card col-6 offset-3 listing-card">
     <img
-      src="<%= listing.image %>"
+      src="<%= listing.image.url %>"
       class="card-img-top show-img"
       alt="listing_image"
     />
@@ -39,8 +41,9 @@
 
 
 <div class="col-8 offset-3 mb-3">
-  <hr />
+  
   <% if (currUser ) { %>
+    <hr />
   <h4>Leave a Review</h4>
   <form
     action="/listings/<%= listing._id %>/reviews"
@@ -82,16 +85,18 @@
   </form>
   <% } %>
 
-
+  <% if(listing.reviews.length>0){ %>
+    <hr>
   <p><b>All Reviews</b></p>
   <div class="row">
-    <% for(review of listing.reviews){ %>
+    <% for(let review of listing.reviews){ %>
     <div class="card col-5 ms-3 mb-3">
       <div class="card-body">
         <div class="card-title"> @<%= review.author.username %> </div>
         <p class="starability-result card-text" data-rating="<%= review.rating%>"></p>
         <div class="card-text"><%= review.comment %></div> 
       </div>
+       <% if (currUser && review.author && review.author._id.equals(currUser._id)) { %>
       <form
         method="post"
         action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
@@ -99,8 +104,17 @@
       >
         <button class="btn btn-sm btn-dark">Delete</button>
       </form>
+      <% } %>
     </div>
 
     <% } %>
   </div>
+  <% } %>
 </div>
+<div class="col-8 offset-3 mb-3">
+<h3>Where you'ill be</h3>
+<div id="map"></div>
+</div>
+
+
+<script src="/js/map.js"></script>
