--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,27 +1,165 @@
 <%layout("/layouts/boilerplate.ejs")%>
 
-    <body>
-         <h3>All Listings</h3>
-        <!-- <form method="get" action="/listings/new">
-     <button>Create New Listing</button> 
-</form>-->
+<style>
+  #filters {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
 
-        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
-            <% for(listing of allListings) {%>
-                <a href="/listings/<%=listing._id%>" class="card-link">
-                <div class="card col listing-card" >
-                    <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
-                    <div class="card-img-overlay"></div>
-                    <div class="card-body">
-                        <p class="card-text">
-                           <b> <%= listing.title %></b> 
-                                <br>
-                                <%= listing.price.toLocaleString("en-IN") %>
-                        </p>
-                    </div>
-                </div>
-                </a>
-                <% } %>
+  .filter {
+    text-align: center;
+    margin-top: 2rem;
+    margin-right: 2rem;
+    opacity: 0.7;
+  }
+  .filter p {
+    font-size: 0.6rem;
+  }
 
-        </div>
-    </body>
+  .filter:hover {
+    opacity: 1;
+    cursor: pointer;
+  }
+
+  .taxInfo {
+    display: none;
+  }
+
+  .tax-toggle {
+    border: solid 1px black;
+    border-radius: 1rem;
+    height: 3.25rem;
+    padding: 1rem;
+    margin-left: 2rem;
+    display: flex;
+    align-items: center;
+  }
+</style>
+<div id="filters">
+  <div class="filter">
+    <div><i class="fa-solid fa-fire"></i></div>
+    <p>Trending</p>
+  </div>
+
+  <div class="filter">
+    <div><i class="fa-solid fa-bed"></i></div>
+    <p>Rooms</p>
+  </div>
+
+  <div class="filter">
+    <div><i class="fa-solid fa-house"></i></div>
+    <p>Entire Homes</p>
+  </div>
+
+  <div class="filter">
+    <div><i class="fa-solid fa-tree"></i></div>
+    <p>Nature Stays</p>
+  </div>
+
+  <div class="filter">
+    <div><i class="fa-solid fa-water"></i></div>
+    <p>Beachfront</p>
+  </div>
+
+  <div class="filter">
+    <div><i class="fa-solid fa-mountain-sun"></i></div>
+    <p>Mountain View</p>
+  </div>
+
+  <div class="filter">
+    <div><i class="fa-solid fa-campground"></i></div>
+    <p>Camping</p>
+  </div>
+
+  <div class="filter">
+    <div><i class="fa-solid fa-city"></i></div>
+    <p>City Apartments</p>
+  </div>
+
+<div class="filter">
+    <div><i class="fa-solid fa-person-swimming"></i></div>
+    <p>With Pool</p>
+  </div>
+
+  <div class="filter">
+    <div><i class="fa-solid fa-mug-hot"></i></div>
+    <p>Breakfast Included</p>
+  </div> 
+
+  <!-- <div class="filter">
+    <div><i class="fa-solid fa-paw"></i></div>
+    <p>Pet Friendly</p>
+  </div> --> 
+
+  <!-- <div class="filter">
+    <div><i class="fa-solid fa-wifi"></i></div>
+    <p>Wi-Fi</p>
+  </div>
+
+  <div class="filter">
+    <div><i class="fa-solid fa-car"></i></div>
+    <p>Parking</p>
+  </div>
+
+  <div class="filter">
+    <div><i class="fa-solid fa-fire-burner"></i></div>
+    <p>BBQ Area</p>
+  </div> -->
+
+  <div class="filter">
+    <div><i class="fa-solid fa-snowflake"></i></div>
+    <p>Air Conditioned</p>
+  </div>
+  <div class="tax-toggle">
+    <div class="form-check-reverse">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        value=""
+        id="checkDefault"
+      />
+      <label class="form-check-label" for="checkDefault">
+        Display total after taxes
+      </label>
+    </div>
+  </div>
+</div>
+
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
+  <% for(listing of allListings) {%>
+  <a href="/listings/<%=listing._id%>" class="card-link">
+    <div class="card col listing-card">
+      <img
+        src="<%= listing.image.url %>"
+        class="card-img-top"
+        alt="listing_image"
+        style="height: 20rem"
+      />
+      <div class="card-img-overlay"></div>
+      <div class="card-body">
+        <p class="card-text">
+          <b> <%= listing.title %></b>
+          <br />
+          <%= listing.price.toLocaleString("en-IN") %>
+          <i class="taxInfo"> &nbsp; &nbsp; +18% GST</i>
+        </p>
+      </div>
+    </div>
+  </a>
+  <% } %>
+</div>
+
+<script>
+  let taxswitch = document.getElementById("checkDefault");
+  taxswitch.addEventListener("click", () => {
+    let taxinfo = document.getElementsByClassName("taxInfo");
+    for (info of taxinfo) {
+      if (info.style.display != "inline") {
+        info.style.display = "inline";
+      } else {
+        info.style.display = "none";
+      }
+    }
+  });
+</script>
